--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div id="editor"></div>
         </div>
         <div class="info horizontal">
-            <button id="attach">Attach</button>
+            <button id="attach"></button>
         </div>
         <div class="info">
             <!-- Some debug information -->
