--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     // Options for the player
                     {
                         url: "https://raw.githubusercontent.com/moroboxai/moroboxai-games/master/pong/agent.*",
+                        language: "lua",
                         width: "500px",
                         height: "400px",
                         onLoad: (language, code) =>
